# exception.hpp

./: CMakeLists.txt  Makefile  README.md  mc.yaml
.github/workflows/: ci.yaml
include/ooxi/exception/: Exception.h++  ExtendedException.h++
src/: Exception.c++  ExtendedException.c++
test/ExceptionTest/: CMakeLists.txt  ExceptionTest.c++
test/GlobalVsLocalExceptionTest/: CMakeLists.txt  GlobalVsLocalExceptionTest.c++
test/SimpleExample/: CMakeLists.txt  SimpleExample.c++
